# playwright-cookie-manager

./: .gitignore  README.md  pyproject.toml
playwright_cookie_manager/: __init__.py  _mcp_server.py  browser.py  cli.py  manager.py  mcp.py  types.py
playwright_cookie_manager/backends/: __init__.py  cloud.py  file.py  sql.py
