[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-cookie-manager"
version = "0.1.0"
description = "Playwright cookie/storage_state manager with pluggable backends. CLI, MCP, and library interfaces."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.0",
]

[project.optional-dependencies]
sql = ["sqlalchemy>=2.0"]
redis = ["redis>=5.0"]
all = ["sqlalchemy>=2.0", "redis>=5.0"]

[project.scripts]
cookie-manager = "playwright_cookie_manager.cli:main"

[project.entry-points."mcp.services"]
cookie-manager = "playwright_cookie_manager.mcp:create_server"

[tool.setuptools.packages.find]
include = ["playwright_cookie_manager*"]
